--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-codepen-prefill-embed": "0.0.2",
     "react-dom": "^17.0.2",
+    "react-embed-gist": "^1.0.11",
+    "react-gist": "^1.2.2",
+    "react-iframe": "^1.8.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.5.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
