--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "docreact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://matthcorvo.github.io/mesreactdocs",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-codepen-prefill-embed": "0.0.2",
@@ -21,6 +23,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "deploy":"npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
